@@ -1431,6 +1431,8 @@ namespace aux {
 		
 		if (e == asio::error::operation_aborted) return;
 
+		mutex_t::scoped_lock l(m_mutex);
+
 		if (m_abort) return;
 
 		error_code ec;
@@ -2552,11 +2554,11 @@ namespace aux {
 			open_listen_port();
 		}
 
-		do
+		bool stop_loop = false;
+		while (!stop_loop)
 		{
 			error_code ec;
 			m_io_service.run(ec);
-			TORRENT_ASSERT(m_abort == true);
 			if (ec)
 			{
 #ifdef TORRENT_DEBUG
@@ -2566,8 +2568,10 @@ namespace aux {
 				TORRENT_ASSERT(false);
 			}
 			m_io_service.reset();
+
+			mutex_t::scoped_lock l(m_mutex);
+			stop_loop = m_abort;
 		}
-		while (!m_abort);
 
 #if defined(TORRENT_VERBOSE_LOGGING) || defined(TORRENT_LOGGING)
 		(*m_logger) << time_now_string() << " locking mutex\n";
